Added mimic of compute node update.

--- a/novadbtest.conf
+++ b/novadbtest.conf
@@ -1,4 +1,13 @@
 [DEFAULT]
 sql_connection = mysql://root:123456@localhost/novadbtest?charset=utf8
+
+rabbit_password = 123456
+rabbit_host = localhost
+rpc_backend = nova.openstack.common.rpc.impl_kombu
+rpc_response_timeout = 100000
+
 #debug = True
 #verbose = True
+
+[conductor]
+topic = testconductor
