--- a/novadbtest.conf
+++ b/novadbtest.conf
@@ -4,7 +4,7 @@ sql_connection = mysql://root:123456@localhost/novadbtest?charset=utf8
 rabbit_password = 123456
 rabbit_host = localhost
 rpc_backend = nova.openstack.common.rpc.impl_kombu
-rpc_response_timeout = 100000
+rpc_response_timeout = 10000000
 
 #debug = True
 #verbose = True
